retrofit added for chat and login activities

--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/values/strings.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="activity_animation_title">Acnimation</string>
     <string name="activity_login_title">Log In</string>
     <string name="title_activity_base">BaseActivity</string>
+    <string name="login_username">Username</string>
+    <string name="login_password">Password</string>
 
 </resources>
